--- a/src/app/classroom/classroom.component.html
+++ b/src/app/classroom/classroom.component.html
@@ -1,26 +1,23 @@
-<pre *ngIf="fAuth.user | async as user;">
+<!-- <pre *ngIf="fAuth.user | async as user;">
     {{user | json}}
-</pre>
-<header class="p-3 text-bg-light">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-        </a>
+</pre> -->
+<header class="p-3 mb-3 border-bottom">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+        <h3>Classroom</h3>
+      </a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-        </ul>
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+
+      </ul>
 
 
-        <div class="text-end">
-          <button type="button" (click)="logout()" class="btn btn-secondary">Logout</button>
-          <img [src]="photoUrl" alt="Logged in user">
-        </div>
+
+      <div class="dropdown text-end">
+        <img [src]="photoUrl" alt="mdo" width="32" height="32" class="rounded-circle">
+        <button type="button" class="btn btn-danger m-lg-4" (click)="logout()">Logout</button>
       </div>
     </div>
-  </header>
+  </div>
+</header>
