--- a/src/app/classroom/classroom.component.html
+++ b/src/app/classroom/classroom.component.html
@@ -3,16 +3,10 @@
 </pre> -->
 <header class="p-3 mb-3 border-bottom">
   <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+    <div class="d-flex space-between">
       <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
         <h3>Classroom</h3>
       </a>
-
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-
-      </ul>
-
-
 
       <div class="dropdown text-end">
         <img [src]="photoUrl" alt="mdo" width="32" height="32" class="rounded-circle">
