removed red debugging

--- a/src/app/classroom/classroom.component.html
+++ b/src/app/classroom/classroom.component.html
@@ -19,7 +19,7 @@
 <!-- rooms -->
 <main class="container-fluid">
   <div class="row">
-    <aside class="col-4" style="border: 1px solid #fd7e14">
+    <aside class="col-4">
       <h3 class="text-center">Active People</h3>
       <ul class="list-group">
         <li class="list-group-item">An item</li>
@@ -29,7 +29,7 @@
         <li class="list-group-item">And a fifth one</li>
       </ul>
     </aside>
-    <section class="col-8" style="border: 1px solid #a52834">
+    <section class="col-8">
       <h3 class="text-center">Rooms</h3>
       <article class="col-sm-12 room-list">
         <div class="card" *ngFor="let room of [1,2,3,4,5]">
