--- a/src/app/classroom/classroom.component.html
+++ b/src/app/classroom/classroom.component.html
@@ -22,11 +22,7 @@
     <aside class="col-4">
       <h3 class="text-center">Active People</h3>
       <ul class="list-group">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
+        <li class="list-group-item" *ngFor="let user of users">{{ user }}</li>
       </ul>
     </aside>
     <section class="col-8">
