Begun work on the video room

--- a/src/app/videoroom/videoroom.component.html
+++ b/src/app/videoroom/videoroom.component.html
@@ -4,6 +4,7 @@
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
           <h3>Classroom</h3>
         </a>
+        <button type="button" class="btn btn-info m-lg-4" (click)="goToClassroom()">Go Back</button>
   
         <div class="dropdown text-end">
           <img [src]="photoUrl" alt="mdo" width="32" height="32" class="rounded-circle">
